# mcp-manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/sprint-plans/2025-08-09/: 14-30-00-sprint-plan.md
ai_docs/: arch.md  tui.md
src/mcp_manager/: __init__.py
src/mcp_manager/cli/: __init__.py  main.py
src/mcp_manager/core/: __init__.py
src/mcp_manager/core/adapters/: __init__.py  base.py  claude_code.py  claude_desktop.py  vscode.py
src/mcp_manager/core/config/: __init__.py  manager.py  storage.py
src/mcp_manager/core/models/: __init__.py  client.py  deployment.py  server.py
src/mcp_manager/tui/: __init__.py  app.py
src/mcp_manager/tui/screens/: __init__.py  clients.py  dashboard.py  deploy.py  help.py  manager.py  servers.py  settings.py
